@@ -2,6 +2,7 @@
 
     * Added ScriptingMenu.gorm
     * NSApplication: new methods: scriptingMenu and setScriptingMenu:
+    * Added 'Do selection' and 'Do and show selection' methods for NSTextView
 
 2003 Mar 23
 
